--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,7 @@
+*{
+ margin: 0;
+ padding: 0;
+}
 body {
   max-width: 100%;
   min-width: 320px;
@@ -7,13 +11,11 @@ body {
 /*  border: 2px solid #DBDBDB; */
   font-size: 10px; /* px means 'pixels': the base font size is now 10 pixels high  */
   font-family: 'Open Sans', sans-serif;
+  z-index: 2;
 }
 header {
-  background-color: #466995;
-  border-bottom: 1px solid #466995;
   position: absolute;
   width: 100%;
-  z-index: 10;
 }
 .top-bar {
   max-width: 50%;
@@ -23,41 +25,51 @@ header {
 }
 .top-menu {
   font-size: 20px;
-  text-shadow: 1px 1px 2px black;
+
 }
 .menu {
   color: white;
   float: right;
 }
 .top-menu a {
-  background: red;
-  border: 1px solid red;
+  background-color: #FF5722;
+  /*border: 1px solid white; */
   border-radius: 3px;
   color: white;
   margin: 10px;
   padding: 14px;
+  box-shadow: 0px 0px 10px black;
+  text-decoration: none;
+
 }
-.menu.hover {
-  color: teal;
+
+.top-menu a.menu:hover {
+  box-shadow: 0px 0px 2px black;
+  color: white;
 }
 .logo {
   float: left;
   font-size: 20px;
-  text-shadow: 1px 1px 2px black;
+  text-shadow: 0px 0px 10px black;
   color: white;
+  margin-top: 20px;
 }
 #banner {
   background-image: url("https://cdnb.artstation.com/p/assets/images/images/006/218/017/large/janus-larsen-macro-world-9.jpg?1496868424");
   background-size: auto;
+  background-repeat: no-repeat;
   background-position: center center;
   background-size: 100%;
-  height: 400px;
+  height: 450px;
   width: 100%;
+
+  z-index: 1;
 }
 #banner .content h1 {
   border: 2px solid white;
+  border-radius: 5px;
   position: relative;
-  top: 50px;
+  top: 130px;
   width: 500px;
   margin: 0 auto;
   padding: 20px 30px;
@@ -68,7 +80,15 @@ h1 {
   margin: 0;
   padding: 20px 0;
   color: #ffffff;
-  text-shadow: 2px 2px 5px black;
+  text-shadow: 0px 0px 20px black;
+}
+h2 {
+  font-size: 40px;
+  text-align: center;
+  margin: 0;
+  padding: 20px 0;
+  color: #212121;
+
 }
 #main {
   margin: 0 auto;
@@ -84,7 +104,7 @@ p, li {
   letter-spacing: .5px;
 }
 a:hover{
-  color: teal;
+  color: #448AFF;
 }
 html {
   background-color: #ffffff;
@@ -95,8 +115,34 @@ img {
   height: 75%;
   width: 75%;
 }
-button{
-  display: block;
-  margin: 0 auto;
-  padding: 10px 15px 15px 15px;
+.share {
+  border-radius: 5px;
+  border: 1px solid LightGrey;
+  padding: 40px 0px;
+  position: relative;
+  text-align: center;
+  width: 50%;
+  margin: auto;
+}
+
+.share a {
+
+  font-size: 20px;
+  background: #FF5722;
+  border: 1px solid #FF5722;
+  border-radius: 3px;
+  color: white;
+  display: inline-block;
+  margin: 10px;
+  padding: 14px;
+  text-decoration: none;
+  box-shadow: 0px 0px 10px black;
+
+}
+
+.share a:hover {
+
+
+
+  box-shadow: 0px 0px 2px black;
 }
