--- a/styles/style.css
+++ b/styles/style.css
@@ -2,11 +2,19 @@
  margin: 0;
  padding: 0;
 }
+.dark-primary-color    { background: #E64A19; }
+.default-primary-color { background: #FF5722; }
+.light-primary-color   { background: #FFCCBC; }
+.text-primary-color    { color: #FFFFFF; }
+.accent-color          { background: #03A9F4; }
+.primary-text-color    { color: #212121; }
+.secondary-text-color  { color: #757575; }
+.divider-color         { border-color: #BDBDBD; }
 body {
   max-width: 100%;
   min-width: 320px;
   margin: 0 auto;
-  background-color: #FfFfFf;
+  background-color: #FFFFFF;
   padding: 0 0px 20px 0px;
 /*  border: 2px solid #DBDBDB; */
   font-size: 10px; /* px means 'pixels': the base font size is now 10 pixels high  */
@@ -31,8 +39,7 @@ header {
   float: right;
 }
 .top-menu a {
-  background-color: #FF5722;
-  /*border: 1px solid white; */
+  background-color: #FF5722;;
   border-radius: 3px;
   color: white;
   margin: 10px;
