change banner image to ultrawide high res

--- a/styles/style.css
+++ b/styles/style.css
@@ -60,7 +60,7 @@ header {
   position: absolute;
 }
 #banner {
-  background-image: url("https://cdnb.artstation.com/p/assets/images/images/006/218/017/large/janus-larsen-macro-world-9.jpg?1496868424");
+  background-image: url("https://cdna.artstation.com/p/assets/images/images/007/949/408/large/janus-larsen-macro-world-9-wide.jpg?1509528285");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
